# StarLancer

./: CHANGES.md  CMakeLists.txt  DataProtocol.h  EntityBulletServer.cpp  EntityBulletServer.h  EntityPlanetServer.cpp  EntityPlanetServer.h  EntityServer.h  EntityShipServer.cpp  EntityShipServer.h  Makefile  Network.cpp  Network.h  README.md  ServerNetwork.cpp  SpaceShipMove_Calculator.cpp  SpaceShipMove_Calculator.h  Utils.h  build.sh  main.cpp  pch.h
config/: settings.json
lib/include/cpu-core/: cpu_mesh.h
lib/include/cpu-engine/: cpu_engine.h  cpu_manager.h
lib/include/cpu-render/: UiBase.h  UiButton.h  UiImage.h  UiText.h  cpu-render.h  cpu_device.h  cpu_sprite.h
lib/lib/: cpu-core-debug.lib  cpu-core.lib  cpu-engine-debug.lib  cpu-engine.lib  cpu-render-debug.lib  cpu-render.lib
res/Ui/UiMenu/: HUD.json  PLAY.json
res/Ui/UiTextures/: PLAY.json
src/Client/: App.cpp  App.h  ButtonListenerManager.cpp  ButtonListenerManager.h  ClientNetwork.cpp  DataProtocol.h  EntityBulletClient.cpp  EntityBulletClient.h  EntityClient.cpp  EntityClient.h  EntityPlanetClient.cpp  EntityPlanetClient.h  Menu.cpp  Menu.h  MenuManager.cpp  MenuManager.h  Network.cpp  Network.h  Utils.cpp  Utils.h  main.cpp  pch.h
src/Server/: DataProtocol.h  EntityBulletServer.cpp  EntityBulletServer.h  EntityPlanetServer.cpp  EntityPlanetServer.h  EntityServer.cpp  EntityServer.h  EntityShipServer.cpp  EntityShipServer.h  Network.cpp  Network.h  ServerNetwork.cpp  SpaceShipMove_Calculator.cpp  SpaceShipMove_Calculator.h  Utils.h  main.cpp  pch.h
